--- a/samples/testTypingGame02/index.html
+++ b/samples/testTypingGame02/index.html
@@ -13,16 +13,16 @@
 <body>
     <div id="app" class="container text-center mt-5">
         <div class="title my-4">
-            <h1 >てえぺんげげえめ</h1>
+            <h1 >タイピングゲーム</h1>
             <div class="progress" style="height:2px;"></div>
         </div>
-        <button v-if="!startFlg" class="btn btn-primary btn-lg" @click="startGame">げえめすてーて</button>
+        <button v-if="!startFlg" class="btn btn-primary btn-lg" @click="startGame">ゲームスタート</button>
         <div class="gameScreen card" v-if="startFlg">
             <div class="card-body">
                 <div class="question">{{question}}</div>
                 <div v-if="clearFlg">
                     <div style="color:orange;">Clear!</div>
-                    <button class="btn btn-link" @click="retry">れてれえ</button>
+                    <button class="btn btn-link" @click="retry">リトライ</button>
                 </div>
     
                 <div v-if="!clearFlg" class="typeFormWrapper">
