--- a/samples/lang_map/index.html
+++ b/samples/lang_map/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -26,7 +25,7 @@
                 </div>
     
                 <div v-if="this.scene=='game'" class="typeFormWrapper">
-                    <div class="typeForm card-header">&nbsp;{{inputString}}&nbsp;</div>
+                    <div class="typeForm card-header">&nbsp;{{input_string}}&nbsp;</div>
                 </div>
                 <div class="gauge progress mt-4">
                     <div class="progress-bar" :style="gaugeStyleObj"></div>
@@ -47,17 +46,19 @@
                 },
                 scene:"home",//{"home","game","result"}
                 current_question:"",
-                questions:[
-                    "apple",
-                    "pineapple",
-                    "grape",
-                    "lemon",
-                    "melon",
-                ],
-                inputString:"",
+                current_answer:"",
                 current_count:0,
+                questions:[// [英語,日本語]
+                    ["test0","テスト0"],
+                    ["test1","テスト1"],
+                    ["test2","テスト2"],
+                ],
+                input_string:"",
                 word_index_counts:0,
                 miss_flg:"",
+
+                // debug
+                lang_mode:0,// 0が通常
             },
             methods:{
                 startGame:function(){
@@ -69,20 +70,19 @@
                 },
                 updateQuestion:function(){
                     // 問題を更新する
-                    this.current_question = this.questions[this.current_count]
-                    this.inputString = ""
+                    this.current_answer = this.questions[this.current_count][0^this.lang_mode]
+                    this.current_question = this.questions[this.current_count][1^this.lang_mode]
+                    this.input_string = ""
                     this.word_index_counts = 0
                 },
                 nextQuestion:function(){
                     // 次の問題に進む
                     this.current_count += 1
-                    this.updateQuestion()
-                    this.miss_flg = false
-
                     // 最後の問題なら
                     if (this.current_count == this.questions.length){
                         this.scene = "result"
                     }
+                    this.updateQuestion()
                 },
                 retry:function(){
                     // リトライ
@@ -109,13 +109,16 @@
                     //ゲーム画面
                     if(this.scene=='game'){
                         //入力するキーが合っているか判別
-                        if(event.key==this.current_question[this.word_index_counts]){
+                        if(event.key==this.current_answer[this.word_index_counts]){
+                            // 画面の色を不正解色から直す
+                            this.miss_flg = false
+
                             this.playSound(this.audio.type)//タイプ音
-                            this.inputString += event.key
+                            this.input_string += event.key
                             this.word_index_counts++
 
                             //もし単語を入力し終わったら
-                            if(this.word_index_counts==this.current_question.length){
+                            if(this.word_index_counts==this.current_answer.length){
                                 this.nextQuestion()//次の問題へ
                             }
                         }else{
