--- a/samples/timer/index.html
+++ b/samples/timer/index.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <title>Document</title>
 </head>
-<body>
-    <div id="app" class="container text-center mt-5">
+<body style="font-size:36px">
+    <div id="app" class="container text-center mt-5" style="max-width:800px">
         <div class="title my-4">
             <h1 >タイピングゲーム</h1>
             <div class="progress" style="height:2px;"></div>
@@ -18,38 +18,35 @@
         <button v-if="this.scene=='home'" class="btn btn-primary btn-lg" @click="startGame">ゲームスタート</button>
         <div class="gameScreen card" v-if="this.scene!='home'" :style=cardStyleObj>
             <div class="card-body">
-                <div class="question">{{ current_question }}</div>
+                <div v-if="this.scene=='game'" class="typeFormWrapper">
+                    <div class="question">{{ current_question }}</div>
+                    <div class="typeForm card-header border-0">&nbsp;{{input_string}}&nbsp;</div>
+                    <div class="gauge progress mt-4">
+                        <div class="progress-bar" :style="gaugeStyleObj"></div>
+                    </div>
+                    <div>{{current_count}}/{{this.questions.length}}</div>
+                </div>
+                    
+
                 <div v-if="this.scene=='result'">
                     <div style="color:orange;">Clear!</div>
-                    <button @click="scoreTable">リザルト(仮)</button>
+                    <button class="btn btn-link" @click="retry">リトライ(Enter)</button>
                     <div>
-                        <table border="1">
-                            <tbody>
-                                <tr id="id-japanese">
-                                    <td>問題</td>
+                        <table class="table table-bordered" style="font-size:28px">
+                            <thead>
+                                <tr>
+                                    <th scope="col">問題</th>
+                                    <th scope="col">解答</th>
+                                    <th scope="col">時間</th>
+                                    <th scope="col">ミス</th>
                                 </tr>
-                                <tr id="id-english">
-                                    <td>解答</td>
-                                </tr>
-                                <tr id="id-time">
-                                    <td>時間</td>
-                                </tr>
-                                <tr id="id-miss_count">
-                                    <td>ミス</td>
-                                </tr>
+                            </thead>
+                            <tbody id="tbody">
                             </tbody>
                         </table>
                     </div>
-                    </table>
-                    <button class="btn btn-link" @click="retry">リトライ(Enter)</button>
+                    
                 </div>
-                <div v-if="this.scene=='game'" class="typeFormWrapper">
-                    <div class="typeForm card-header">&nbsp;{{input_string}}&nbsp;</div>
-                </div>
-                <div class="gauge progress mt-4">
-                    <div class="progress-bar" :style="gaugeStyleObj"></div>
-                </div>
-                <div>{{current_count}}/{{this.questions.length}}</div>
             </div>
         </div>
     </div>
