--- a/samples/load_data/index.html
+++ b/samples/load_data/index.html
@@ -17,7 +17,12 @@
         </div>
         <div v-if="this.scene=='home'">
             <input id="input_file" type="file" @change="loadCsvFile" accept=".csv">
+            <div style="font-size:20px">
+                答えを常に表示
+                <input v-model="hintMode" type="checkbox" style="width: 20px; height: 20px;">
+            </div>
             <button class="btn btn-primary btn-lg" @click="startGame">ゲームスタート</button>
+            
         </div>
         
         <div id="gameScreen" class="gameScreen card" v-if="this.scene!='home'">
