--- a/TypingGame/index.html
+++ b/TypingGame/index.html
@@ -15,7 +15,16 @@
             <h1 >タイピングゲーム</h1>
             <div class="progress" style="height:2px;"></div>
         </div>
-        <button v-if="this.scene=='home'" class="btn btn-primary btn-lg" @click="startGame">ゲームスタート</button>
+        <div v-if="this.scene=='home'">
+            <input id="input_file" type="file" @change="loadCsvFile" accept=".csv">
+            <div style="font-size:20px">
+                答えを常に表示
+                <input v-model="hintMode" type="checkbox" style="width: 20px; height: 20px;">
+            </div>
+            <button class="btn btn-primary btn-lg" @click="startGame">ゲームスタート</button>
+            
+        </div>
+        
         <div id="gameScreen" class="gameScreen card" v-if="this.scene!='home'">
             <div class="card-body">
                 <div v-if="this.scene=='game'" class="typeFormWrapper">
