説明テキストの追加

--- a/TypingGame/index.html
+++ b/TypingGame/index.html
@@ -78,6 +78,7 @@
                 </div>
             </div>
         </div>
+        <p v-if="this.scene=='game'" v-cloak>スペースキー： 答えの表示　Esc: ホームに戻る　　　　　　　　ミス数： {{miss_count}}</p>
     </div>
     <script type="module" src="api.js"></script>
     <script type="module" src="script.js"></script>
