--- a/TypingGame/index.html
+++ b/TypingGame/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="#">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <style>[v-cloak] {display:none;}</style>
-    <title>Document</title>
+    <title>Tango Typing</title>
 </head>
 <body>
     <div id="app" class="container text-center mt-5">
