--- a/home/index.html
+++ b/home/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="#">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
     <style>[v-cloak] {display:none;}</style>
     <title>Tango Typing</title>
 </head>
@@ -17,13 +17,24 @@
             <h1 >Tango Typing</h1>
             <div class="progress title-bar"></div>
         </div>
-
-        <div v-if="!isLogined">
+        <div v-show="!isLogined" v-cloak>
             <button v-on:click="locate" class="btn btn-primary">ログイン</button>
         </div>
 
-        <div v-if="isLogined">
+        <div v-show="isLogined" v-cloak>
             <p>{{userID}}</p>
+            <div class="card">
+                <div class="card-body" id="table">
+                    <table class="table table-bordered table-sm">
+                        <tbody>
+                            <tr v-for="question in questions">
+                                <td @click="ClickedQuestion(question.title)">{{question.title}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            
         </div>
     </div>
     <script type="module" src="api.js"></script>
